Thu Jul 29 16:47:56 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl
	  (get_nodeapp_manager):

	  Removed emulated exception parameter.  The corresponding method
	  declaration in the header doesn't have such a parameter.  Fixes
	  a compile-time problem.

Thu Jul 29 14:28:55 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
	  (createPackage, deletePackage, findPackageByName):

	  Fixed emulated exception macro usage.  Addresses compile-time
	  problems in MSVC++ 6 builds.

Tue Jul 27 14:48:10 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
	  Removed the emulated exception parameter from the destructor
	  so the file will be compiled when the exception is turned off.

Tue Jul 27 09:58:58 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication.mpc:
          Rearranged the order of libraries to fix link errors in static
          configurations.

Mon Jul 26 11:08:14 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DAnCE/tests/Config_Handlers/handler_test.mpb:
          Added CIAO_DnC_Client to resolve link errors

Mon Jul 26 11:06:38 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl:
          Added ACE_INLINE for the get_nodeapp_ref method to resolve
          linking errors in the builds with static configurations

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
          changed changed nade_app_manager to node_app_manager!

        * DAnCE/NodDaemon/NodeDaemon.mpc:
          Resolved link errors

Sun Jul 25 22:13:48 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* Release:

	  Makefile with release information.

Sun Jul 25 22:15:03 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ChangeLog:
