@@ -1,3 +1,13 @@
+Thu Jul 29 16:54:01 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* DAnCE/ciao/Servant_Impl_T.cpp (get_all_facets):
+	  (get_all_consumers):
+
+	  Fixed incorrect emulated exception parameter.  The method
+	  definition incorrectly used a default parameter.
+
+	  Fixed unused parameter warning.
+
 Thu Jul 29 16:47:56 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl
